--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -8,12 +8,15 @@
     background-color: #fff;
     color: black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+    z-index: 9000;
   }
   .brand-name {
     text-decoration: none;
-    color: black;
-    font-size: 1.8rem;
+    color: rgb(68, 138, 132);
+    font-size: 5rem;
     margin-left: 1rem;
+    font-weight: 900;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
   .navigation-menu {
     margin-left: auto;
@@ -31,6 +34,7 @@
     text-decoration: none;
     display: block;
     width: 100%;
+    font-size: 2rem;
   }
   .hamburger {
     border: 0;
