--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  line-height: 1.7;
+  color: gray;
+  padding: 3rem;
+  box-sizing: border-box;
+}
+html{
+  font-size: 62.5%;
 }
 
 code {
