--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -40,13 +40,8 @@ color: rgb(68, 138, 132);
      margin-right: 9rem;
      width: 25%;
      position: relative;
-     
-
-    
-
-
-
 }
+
 .product1{
     padding: 25rem 2rem;
     margin-top: -25vh;
@@ -70,15 +65,9 @@ color: rgb(68, 138, 132);
 }
 .featureBox:hover {
     transform: translateY(-1.5rem) scale(1.03); }
-.featureBoxText{
 
-}
-header1{
-    
-    position: relative;
-}
 .imgg{
-    width: 55%;
+    width: 50%;
     margin-top: -2rem;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 100px;
@@ -86,19 +75,10 @@ header1{
     transition: all .2s;
     z-index: 10;
     outline-offset: 2rem; } 
-    @media (max-width: 56.25em) {
-        .header1{
-        
-            
-        }
+    @media (max-width: 56.25em){
      
         .imgg {
-            box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.3);
-            position: relative;
-            float: left;
-            width: 5rem;
-            display: flex;
-
+            box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.3);
             
         }
      }
@@ -118,28 +98,29 @@ header1{
     
 }
 @media (max-width: 56.25em) {
-    imgg1 {
-      top: 0;
-      transform: scale(1.2); } }
+    .imgg1 {
+      display: none; } }
 .imgg2{
     right: 0rem;
     top: 2rem;
     
 }
 @media (max-width: 56.25em) {
-    imgg2 {
-      top: -1rem;
-      transform: scale(1.3); } }
+    .imgg2 {
+      display: none; } }
 .imgg3{
    
     left: 20%;
-    top: 10rem;
+    top: 7rem;
     
 }
 @media (max-width: 56.25em) {
-    imgg3 {
-      top: 1rem;
-      margin-left: -10rem;
+    .imgg3 {
+    left: -75px;
+    top: -2rem;
+     width: 16rem;
+     margin-top: 20px;
+     border-radius: 90%;
       transform: scale(1.1); } }
 .row,
 .p{
@@ -190,6 +171,7 @@ header1{
         display: table;
         clear: both; 
     }
+
 
 
 
