--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -62,6 +62,11 @@ padding: 6px;
 transition: all 0.4s ease 0s;
 width: 50px;
 }
+@media (max-width: 56.25em) {
+    .contact-social ul li a {
+        width: 36px;
+        text-align: center;
+    } }
 
 .contact-social ul li a:hover {
 border: 3px solid white;
