--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -78,11 +78,19 @@
     .button:hover{
      background-color: #555;
     }
+    row{
+        width: 560px;
+    }
     
     @media screen and (max-width: 56.25em) {
+     
      .column {
-     width:100%;
+        width: 250px;
+        margin: 5px -25px;
+    
      display: block;
+    
+     
         } 
          .p{
                 font-size:1rem ;
